--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,4 @@
 {
-  "require-dev": {
-    "php-mock/php-mock-phpunit": "1.*",
-    "brain/monkey": "1.*"
-  },
   "autoload": {
     "psr-4": {
       "SemaphoreApp\\": "src/"
@@ -12,5 +8,8 @@
     "psr-4": {
       "SemaphoreApp\\Tests\\": "tests/"
     }
+  },
+  "require-dev": {
+    "php-mock/php-mock-phpunit": "1.1.2"
   }
 }
