--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,4 +11,13 @@
 			<directory suffix=".php">./tests/</directory>
 		</testsuite>
 	</testsuites>
+	<filter>
+		<whitelist>
+			<directory suffix=".php">src/</directory>
+		</whitelist>
+	</filter>
+	<logging>
+		<log type="coverage-text" target="build/coverage.txt"/>
+		<log type="coverage-clover" target="build/logs/clover.xml"/>
+	</logging>
 </phpunit>
